Incoporated category endpoints.
